Fix long URLs distorting page layout.

--- a/root/static/styles/layout.less
+++ b/root/static/styles/layout.less
@@ -18,6 +18,7 @@ body {
 a {
     color:@link-default;
     text-decoration: none;
+    word-break: keep-all;
 
     &:visited {
         color:@link-visited;
